Bug 973905 - setTimeout/setInterval with a string first arg but more than two arguments should still work (and ignore the extra arguments). r=smaug, a=lsblakk